<resources>
    <string name="app_name">Real Estate Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="description">Description</string>
    <string name="agent_in_charge">Agent in charge</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="location">Location</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="price">Price</string>
    <string name="entry_date">Entry date</string>
    <string name="sale_date">Sale date</string>
    <string name="map">Map</string>
    <string name="media">Media</string>
    <string name="video">Video</string>

    <string name="click_on_an_element_in_the_list">Click on an element in the list to display details
     </string>

    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_search">Search</string>

    <string name="borough_or_neighborhood">Borough or Neighborhood</string>
    <string name="price_in_dollar">Price in dollar</string>
    <string name="add_main_photo">Add Main Photo</string>
    <string name="type">Type</string>
    <string name="add_other_photos">Add other photos</string>
    <string name="tape_description_here">Tape description here</string>
    <string name="status">Status</string>
    <string name="address">Address</string>
    <string name="ok">OK</string>
    <string name="choose_date">Choose Date</string>
    <string name="surface_in_square_meter">Surface in square meter</string>
    <string name="video_id">Video Id (11 characters)</string>

    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>

    <string name="put_on_the_market_since_in_days">Put on the market since (dd/MM/yyyy)</string>
    <string name="sale_since_in_days">Sale since (dd/MM/yyyy)</string>
    <string name="search">Search</string>
    <string name="minimum_price_in_dollar">Minimum price in dollar</string>
    <string name="maximum_price_in_dollar">Maximum price in dollar</string>
    <string name="minimum_surface_in_square_meters">Minimum surface in sq m</string>
    <string name="maximum_surface_in_square_meters">Maximum surface in sq m</string>
    <string name="minimum_number_of_photos">Minimum number of photos</string>
    <string name="menu_clear_filter">clear_filter</string>

    <string-array name="real_estate_types">
        <item>Loft</item>
        <item>Penthouse</item>
        <item>Flat</item>
        <item>House</item>
        <item>Duplex</item>
    </string-array>

    <string-array name="real_estate_status">
        <item>For sale</item>
        <item>Sold</item>
    </string-array>

    <string-array name="real_estate_agent">
        <item>Jessica C. Campbell</item>
        <item>Christian Haag</item>
    </string-array>
</resources>
