<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".OnClickRealEstateActivity">

    <ImageView
        android:id="@+id/activity_on_click_real_estate_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

  <!-- Description Title-->
    <androidx.cardview.widget.CardView
        android:id="@+id/activity_on_click_real_estate_title_description_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/activity_on_click_real_estate_description_card_color"
        app:layout_constraintTop_toBottomOf="@id/activity_on_click_real_estate_image_view"
        app:layout_constraintStart_toStartOf="parent"
        >

    <TextView
        android:id="@+id/activity_on_click_real_estate_title_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_on_click_real_estate_title_description_margin"
        android:text="@string/description"
        android:textStyle="bold"
        android:textSize="@dimen/activity_on_click_real_estate_title_description_size" />

    </androidx.cardview.widget.CardView>
    <!-- Description Title-->

    <!-- Status-->
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/activity_on_click_real_estate_status_cardview_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/activity_on_click_real_estate_title_description_cardview"
        app:layout_constraintTop_toTopOf="@id/activity_on_click_real_estate_title_description_cardview"
        app:layout_constraintBottom_toBottomOf="@+id/activity_on_click_real_estate_title_description_cardview">

    <TextView
        android:id="@+id/activity_on_click_real_estate_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold" />

    </androidx.cardview.widget.CardView>
    <!-- Status-->

    <!-- Description Text-->
    <androidx.cardview.widget.CardView
        android:id="@+id/activity_on_click_real_estate_description_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/activity_on_click_real_estate_description_card_color"
        app:layout_constraintTop_toBottomOf="@id/activity_on_click_real_estate_title_description_cardview"
        app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/activity_on_click_real_estate_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_on_click_real_estate_description_margin"
        />

    </androidx.cardview.widget.CardView>
    <!-- Description Text-->


    <!-- Surface -->
    <LinearLayout
        android:id="@+id/activity_on_click_real_estate_linear_layout_surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_on_click_real_estate_icons_margin_top"
        android:layout_marginStart="@dimen/activity_on_click_real_estate_icon_margin_start"
        app:layout_constraintTop_toBottomOf="@+id/activity_on_click_real_estate_description_cardview"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_settings_overscan_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
            android:text="@string/surface"
            android:textStyle="bold"
            />

            <TextView
                android:id="@+id/activity_on_click_real_estate_surface_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"/>
        </LinearLayout>

    </LinearLayout>
    <!-- Surface -->

    <!-- Number of rooms-->
    <LinearLayout
        android:id="@+id/activity_on_click_real_estate_linear_layout_rooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_on_click_real_estate_icons_margin_top"
        android:layout_marginStart="@dimen/activity_on_click_real_estate_icon_margin_start"
        app:layout_constraintTop_toBottomOf="@+id/activity_on_click_real_estate_linear_layout_surface"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_home_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                android:text="@string/number_of_rooms"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_on_click_real_estate_rooms_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                />
        </LinearLayout>

    </LinearLayout>
    <!-- Number of rooms-->

    <!-- Number of bathrooms-->
    <LinearLayout
        android:id="@+id/activity_on_click_real_estate_linear_layout_bathrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_on_click_real_estate_icons_margin_top"
        android:layout_marginStart="@dimen/activity_on_click_real_estate_icon_margin_start"
        app:layout_constraintTop_toBottomOf="@id/activity_on_click_real_estate_linear_layout_rooms"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_bathtub_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                android:text="@string/number_of_bathrooms"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_on_click_real_estate_bathrooms_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                />
        </LinearLayout>

    </LinearLayout>
    <!-- Number of bathrooms-->

    <!-- Number of bedrooms-->
    <LinearLayout
        android:id="@+id/activity_on_click_real_estate_linear_layout_bedrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_on_click_real_estate_icons_margin_top"
        android:layout_marginStart="@dimen/activity_on_click_real_estate_icon_margin_start"
        app:layout_constraintTop_toBottomOf="@id/activity_on_click_real_estate_linear_layout_bathrooms"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_local_hotel_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                android:text="@string/number_of_bedrooms"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_on_click_real_estate_bedrooms_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                />
        </LinearLayout>

    </LinearLayout>
    <!-- Number of bedrooms-->

   <!-- Location-->
    <LinearLayout
        android:id="@+id/activity_on_click_real_estate_linear_layout_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_on_click_real_estate_icons_margin_top"
        android:layout_marginStart="@dimen/activity_on_click_real_estate_icon_margin_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_on_click_real_estate_linear_layout_bedrooms">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_location_on_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                android:text="@string/location"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_on_click_real_estate_location_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                />
        </LinearLayout>

    </LinearLayout>
    <!-- Location -->

    <!-- Price -->
    <LinearLayout
        android:id="@+id/activity_on_click_real_estate_linear_layout_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_on_click_real_estate_icons_margin_top"
        android:layout_marginStart="@dimen/activity_on_click_real_estate_icon_margin_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_on_click_real_estate_linear_layout_location">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_attach_money_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                android:text="@string/price"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_on_click_real_estate_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                />
        </LinearLayout>

    </LinearLayout>
    <!-- Price -->

    <!-- Entry Date-->
    <LinearLayout
        android:id="@+id/activity_on_click_real_estate_linear_layout_entry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_on_click_real_estate_icons_margin_top"
        android:layout_marginStart="@dimen/activity_on_click_real_estate_icon_margin_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_on_click_real_estate_linear_layout_price">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_event_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                android:text="@string/entry_date"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_on_click_real_estate_entry_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                />
        </LinearLayout>

    </LinearLayout>
    <!-- Entry Date -->

   <!-- Sale Date -->
    <LinearLayout
        android:id="@+id/activity_on_click_real_estate_linear_layout_sale_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_on_click_real_estate_icons_margin_top"
        android:layout_marginStart="@dimen/activity_on_click_real_estate_icon_margin_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_on_click_real_estate_linear_layout_entry_date">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_shop_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                android:text="@string/sale_date"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_on_click_real_estate_sale_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_on_click_real_estate_distance_between_icon_and_text"
                />
        </LinearLayout>

    </LinearLayout>
    <!-- Sale Date -->

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>